--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "express-generator": "^4.16.1",
+    "express-generator": "^4.2.0",
     "global": "^4.4.0",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
-    "mongoose": "~5.9.2",
-    "morgan": "~1.9.1", 
+    "mongoose": "^5.13.14",
+    "morgan": "~1.9.1",
     "nodemon": "^2.0.15"
-  }, 
+  },
   "devDependencies": {
     "hbs": "^4.2.0",
     "seedgoose": "^2.0.2"
