--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "global": "^4.4.0",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
-    "mongoose": "^5.13.14",
+    "index.js": "^0.0.3",
+    "mongoose": "~5.9.2",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.15"
   },
